--- a/ryualvin/ryualvin-admin/pom.xml
+++ b/ryualvin/ryualvin-admin/pom.xml
@@ -24,4 +24,27 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Package as an executable jar -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+<!--                    指定入口，从入口开始打包-->
+                    <mainClass>org.yeahicode.YCZApplication</mainClass>
+                    <!--打包成可执行文件-->
+                    <executable>true</executable>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
