领域构建初版（例：rbac领域）

--- a/ryualvin/ryualvin-domain/pom.xml
+++ b/ryualvin/ryualvin-domain/pom.xml
@@ -23,6 +23,7 @@
         <module>ryualvin-domain-rbac</module>
         <module>ryualvin-domain-work</module>
         <module>ryualvin-domain-parameter</module>
+        <module>ryualvin-domain-common</module>
     </modules>
 
     <properties>
