--- a/ryualvin/ryualvin-domain/ryualvin-domain-common/pom.xml
+++ b/ryualvin/ryualvin-domain/ryualvin-domain-common/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ryualvin</artifactId>
+        <artifactId>ryualvin-domain</artifactId>
         <groupId>org.yeahicode</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ryualvin-application</artifactId>
+    <artifactId>ryualvin-domain-common</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.yeahicode</groupId>
-            <artifactId>ryualvin-domain-common</artifactId>
+            <artifactId>ryualvin-domain-rbac</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
