--- a/ryualvin/ryualvin-domain/ryualvin-domain-rbac/pom.xml
+++ b/ryualvin/ryualvin-domain/ryualvin-domain-rbac/pom.xml
@@ -17,4 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.yeahicode</groupId>
+            <artifactId>ryualvin-common-mybatisplus</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
