--- a/ryualvin/ryualvin-admin/pom.xml
+++ b/ryualvin/ryualvin-admin/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>ryualvin-application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.yeahicode</groupId>
+            <artifactId>ryualvin-utility</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
