--- a/ryualvin/ryualvin-domain/ryualvin-common-mybatisplus/pom.xml
+++ b/ryualvin/ryualvin-domain/ryualvin-common-mybatisplus/pom.xml
@@ -26,5 +26,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yeahicode</groupId>
+            <artifactId>ryualvin-utility</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
