环境隔离处理

--- a/ryualvin/ryualvin-admin/src/main/resources/application.yaml
+++ b/ryualvin/ryualvin-admin/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
 spring:
   profiles:
-    include: controller,repository
+#    include: controller-dev,repository-dev
+    active: controller-prod,repository-prod
