--- a/ryualvin/ryualvin-admin/src/main/resources/application.yaml
+++ b/ryualvin/ryualvin-admin/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
   profiles:
-#    include: controller-dev,repository-dev
-    active: controller-prod,repository-prod
+    include: controller-dev,repository-dev
+#    active: controller-prod,repository-prod
+
+ryualvin:
+  address: tokyo
