参数注入处理@ConfigurationProperties(prefix=xxx)+@EnableConfigurationProperties+@Configuration

--- a/ryualvin/ryualvin-admin/src/main/resources/application.yaml
+++ b/ryualvin/ryualvin-admin/src/main/resources/application.yaml
@@ -3,5 +3,8 @@ spring:
     include: controller-dev,repository-dev
 #    active: controller-prod,repository-prod
 
-ryualvin:
-  address: tokyo
+admin:
+  ryualvin:
+    address: tokyo
+    name: sben
+    
