--- a/Vue/13-webpack的使用/13-03-webpack的loader/package.json
+++ b/Vue/13-webpack的使用/13-03-webpack的loader/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "less": "^3.9.0",
