--- a/Vue/13-webpack的使用/13-04-webpack配置vue/package.json
+++ b/Vue/13-webpack的使用/13-04-webpack配置vue/package.json
@@ -8,8 +8,14 @@
     "build": "webpack"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "vue": "^2.5.21"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.23.1",
+    "vue-loader": "^13.0.0",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^3.6.0"
   }
 }
