--- a/Vue/13-webpack的使用/13-05-webpack的plugin/package.json
+++ b/Vue/13-webpack的使用/13-05-webpack的plugin/package.json
@@ -13,9 +13,12 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "vue-loader": "^13.0.0",
     "vue-template-compiler": "^2.5.21",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "url-loader": "^0.5.9",
+    "file-loader": "^1.1.11"
   }
 }
