--- a/Vue/13-webpack的使用/13-05-webpack的plugin/package.json
+++ b/Vue/13-webpack的使用/13-05-webpack的plugin/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "author": "",
   "dependencies": {
     "vue": "^2.5.21"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
@@ -21,8 +25,6 @@
     "vue-loader": "^13.0.0",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^3.6.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1"
+    "webpack-dev-server": "^2.9.1"
   }
 }
