--- a/Vue/13-webpack的使用/13-06-webpack配置分离/package.json
+++ b/Vue/13-webpack的使用/13-06-webpack配置分离/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vuewebpack",
+  "name": "configsep",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,5 +26,7 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.5"
-  }
+  },
+  "license": "ISC",
+  "description": ""
 }
