--- a/90-supermall/package.json
+++ b/90-supermall/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
